// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubjectLines /> should render the component and show the "Other" toggle 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="title"
    >
      Edit the subject of the contact form
    </div>
    <div
      class="description"
    >
      Here is a default list of subject lines. If there is no subject added, user can freely type any subject.
    </div>
    <div
      class="checkbox"
    >
      <label
        class="ui-label-label-3864 label"
        for="checkbox-1"
      >
        <input
          checked=""
          class="input"
          id="checkbox-1"
          name="checkbox-1"
          type="checkbox"
        />
        Allow custom input using “Other”
      </label>
    </div>
    <div
      class="subjectLinesWrapper"
      style="max-height: 240px;"
    >
      <div
        class="wrapper"
        data-handler-id="T0"
        style="opacity: 1;"
      >
        <div
          draggable="true"
        >
          <i
            class="material-icons dragIndicator"
          >
            drag_indicator
          </i>
        </div>
        <div
          class="wrapper"
        >
          <input
            class="input"
            data-resizable="false"
            id="input-text-2"
            name="input-text-2"
            type="text"
            value="Option 1"
          />
        </div>
        <i
          class="material-icons deleteIcon"
        >
          delete
        </i>
      </div>
      <div
        class="wrapper"
        data-handler-id="T2"
        style="opacity: 1;"
      >
        <div
          draggable="true"
        >
          <i
            class="material-icons dragIndicator"
          >
            drag_indicator
          </i>
        </div>
        <div
          class="wrapper"
        >
          <input
            class="input"
            data-resizable="false"
            id="input-text-3"
            name="input-text-3"
            type="text"
            value="Option 2"
          />
        </div>
        <i
          class="material-icons deleteIcon"
        >
          delete
        </i>
      </div>
      <div
        class="wrapper"
        data-handler-id="T4"
        style="opacity: 1;"
      >
        <div
          draggable="true"
        >
          <i
            class="material-icons dragIndicator"
          >
            drag_indicator
          </i>
        </div>
        <div
          class="wrapper"
        >
          <input
            class="input"
            data-resizable="false"
            id="input-text-4"
            name="input-text-4"
            type="text"
            value="Option 3"
          />
        </div>
        <i
          class="material-icons deleteIcon"
        >
          delete
        </i>
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        aria-disabled="false"
        class="wrapper button fill secondary medium"
        type="button"
      >
        <span
          class="content"
        >
          <i
            class="material-icons"
          >
            add
          </i>
          <span>
            Add Subject Line
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<SubjectLines /> should render the component with no subject lines and hide the "Other" toggle 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="title"
    >
      Edit the subject of the contact form
    </div>
    <div
      class="description"
    >
      Here is a default list of subject lines. If there is no subject added, user can freely type any subject.
    </div>
    <div
      class="subjectLinesWrapper"
      style="max-height: 240px;"
    />
    <div
      class="footer"
    >
      <button
        aria-disabled="false"
        class="wrapper button fill secondary medium"
        type="button"
      >
        <span
          class="content"
        >
          <i
            class="material-icons"
          >
            add
          </i>
          <span>
            Add Subject Line
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
